# streamlit-scripts

./: .gitignore  pyproject.toml  requirements.txt
.github/actions/setup-env/: action.yml
.github/workflows/: pytest.yml  streamlit.yml
covert/: app.py
covert/common/: data_preview.py  download_url.py  file_uploader.py  upload_file.py
covert/common/tests/: test_data_preview.py  test_download_file.py  test_upload_file.py
covert/scripts/backfill/: page.py
covert/scripts/combine/: page.py
covert/scripts/default/: default.py  gencsv.py  latexall.py
covert/scripts/files/: extract_tasks_by_key.py  remove_ids.py  remove_tasks_by_key.py
covert/scripts/files_converters/: jsonl_to_csv.py
covert/scripts/files_processing/: converter.py  diff_files.py  duplicates_remover.py  extract_keys.py  extract_tasks_by_key.py  remove_tasks_by_key.py  split_tasks_by_key.py
covert/scripts/files_processing/converters/: json_reader.py  to_csv.py  to_json.py  to_jsonl.py
covert/scripts/files_processing/tests/: test_extract_tasks_by_key.py  test_remove_tasks_by_key.py
covert/scripts/string_processing/: extract_ids.py
covert/scripts/types/: file_types.py  parse_type.py
covert/scripts/validators/: latex.py  profiler.py  schema_validator.py
covert/states/: file_state.py
covert/tests/: test_smoke_test_pages.py
covert/utils/: dataframes.py  files.py  latex.py  string_utils.py  transform.py  validate_schema.py
covert/utils/tests/: test_string_utils.py
exports/: gencsv.py  hello.py  latexall.py  utils.py
