[tool.poetry]
name = "covert"
version = "0.1.0"
description = "description"

[tool.poetry.dependencies]
python = "^3.12"
antlr4-python3-runtime = "4.11.0"
numpy = "^2.2.4"
pandas = "^2.2.3"
streamlit = "1.43.2"
sympy = "1.13.3"
authlib = "^1.5.1"
jsonata-python = "^0.5.3"
lark = "1.2.2"
pylatexenc = "2.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
